selfhost/test/typechecker/if/error_unfilled_holes_bindingdecl.4.out
Error at %FILE_NAME%:1:48
Type mismatch
  |  val a = if true { Option.Some([]) } else Option.None_
                                                    ^
Expected: <unknown>[]?
but instead found: <unknown>?
