selfhost/test/typechecker/if/error_unfilled_holes_bindingdecl.4.abra
val a = if true { Option.Some([]) } else Option.None_